# facerec

./: .gitignore  CMakeLists.txt  FaceRec.pro  Info.plist  Makefile  embedding_debug.txt  facerecognitioncontroller.cpp  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_predefs.h  qmake_qmake_immediate.qrc  qrc_qmake_qmake_immediate.cpp  settings.json  streams.json
facerec.app/Contents/: Info.plist
facerec.app/Contents/MacOS/: facerec
facerec.app/Contents/Resources/: streams.json
src/controllers/: facedetectioncontroller.cpp  facedetectioncontroller.h  facerecognitioncontroller.cpp  facerecognitioncontroller.h
src/models/: faissmanager.cpp  faissmanager.h  modelmanager.cpp  modelmanager.h  personinfo.h  settingsmanager.cpp  settingsmanager.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  videowidget.cpp  videowidget.h  videowidget.ui
